# SolarEngine

./: CMakeLists.txt  CMakeSettings.json  README.md  run.bat
cmake/Modules/: FindAssimp.cmake  FindSTB.cmake
data/shaders/: LightingFragment.glsl  LightingVertex.glsl  SimpleFragment.glsl  SimpleTexturedFragment.glsl  SimpleVertex.glsl
data/shaders/Voxel Cone Tracing/: VCT_Vertex.glsl
python/test/: Test.py
src/samples/: CMakeLists.txt
src/samples/Log_Test/: CMakeLists.txt  LogTest.cpp
src/samples/Model/: CMakeLists.txt  ModelTest.cpp
src/samples/SDL_Test/: CMakeLists.txt  SDLTest.cpp
src/samples/Scene_Test/: CMakeLists.txt  SceneTest.cpp  config.json
src/solar/: Common.h  Types.h
src/solar/core/: Application.cpp  Application.h  Context.cpp  Context.h  Engine.cpp  Engine.h  Object.cpp  Object.h  Solar_Module.cpp  Timer.cpp  Timer.h
src/solar/graphics/: Camera.cpp  Camera.h  Color.cpp  Color.h  Graphics.cpp  Graphics.h  Mesh.cpp  Mesh.h  StaticModel.cpp  StaticModel.h  VertexAttributes.cpp  VertexAttributes.h  wrap_graphics.cpp  wrap_graphics.h
src/solar/graphics/opengl/: Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/solar/graphics/shapes/: Shape.cpp  Shape.h
src/solar/input/: Input.cpp  Input.h
src/solar/io/: Log.cpp  Log.h
src/solar/main/: main.cpp
src/solar/math/: Math.h
src/solar/resource/: Image.cpp  Image.h  Model.cpp  Model.h  Properties.cpp  Properties.h
src/solar/scene/: Node.cpp  Node.h  Scene.cpp  Scene.h
src/solar/window/: Window.cpp  Window.h  wrap_window.cpp  wrap_window.h
